# $Id$

2006-11-06	Konstantin V. Arkhipov

	* main/Mail/MimePart.class.php: strange typo in quoted encoding fixed.

	* main/Mail/Mail.class.php: fixed from-address encoding's handling.

	* meta/builders/BaseBuilder.class.php: backported fix for non-required
	Ranges generation.

2006-10-25	Konstantin V. Arkhipov

	* core/DB/MySQL.class.php: always force new link creation for
	non-persistent connections.

2006-10-21	Konstantin V. Arkhipov

	* 0.6.3 released.

2006-10-18	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveImage.class.php: big images' handling
	fixed.

2006-10-07	Konstantin V. Arkhipov

	* meta/: deprecated identifier's description thru property's
	identifier="true"; use shortcut instead - <identifier />.

2006-10-05	Konstantin V. Arkhipov

	* meta/builders/AutoDaoBuilder.class.php: public constructor's
	generation fixed.

2006-10-04	Konstantin V. Arkhipov

	* core/Base/Assert.class.php: simplified isInteger-checking, succeeds
	on integer's with leading zeros now; arrived from trunk.

2006-10-02	Konstantin V. Arkhipov

	* meta/builders/SchemaBuilder.class.php: do not generate unsupported
	relations in schema.

2006-09-26	Konstantin V. Arkhipov

	* meta/builders/SchemaBuilder.class.php: handling of property-less
	classes fixed too.

	* meta/builders/AutoDaoBuilder.class.php: fixed bug with inherited
	property-less DAO's.

2006-09-25	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: corrected handling of
	parent's identifiers (if any).

	* meta/builders/ProtoClassBuilder.class.php: inheritance support
	implemented, useless constructor and private property dropped.

	* core/OSQL/TruncateQuery.class.php,
	test/core/TruncateQueryTest.class.php: single table handling fixed,
	test updated.

	* meta/classes/MetaClass.class.php: try to resolve parent's identifier
	in cases where child doesn't own one, arrived from trunk.

2006-09-22	Konstantin V. Arkhipov

	* ext/src/main/DAOs/Handlers/SharedMemorySegmentHandler.c: dropped.
