@@ -59,7 +59,7 @@
 		}
 
 		protected function store(
-			$action, $key, &$value, $expires = Cache::EXPIRES_MEDIUM
+			$action, $key, $value, $expires = Cache::EXPIRES_MEDIUM
 		)
 		{
 			$this->pool[$key] = $value;
