@@ -61,7 +61,7 @@
 		}
 
 		protected function store(
-			$action, $key, &$value, $expires = Cache::EXPIRES_MEDIUM
+			$action, $key, $value, $expires = Cache::EXPIRES_MEDIUM
 		)
 		{
 			return $this->peer->$action($this->watermark.$key, $value, $expires);
